[gd_scene load_steps=10 format=3 uid="uid://dobxp8i6xj2no"]

[ext_resource type="Shader" uid="uid://cku2yi4knc8xa" path="res://Shaders/smooth_pixels.gdshader" id="1_0vbqt"]
[ext_resource type="PackedScene" uid="uid://2ngcpcue2qx0" path="res://Scenes/inGameUI.tscn" id="2_47rga"]
[ext_resource type="PackedScene" uid="uid://4epow0munt6q" path="res://Scenes/quest_dialogue.tscn" id="2_yyxd1"]
[ext_resource type="Script" uid="uid://siwxjihs0civ" path="res://Scripts/autoCamera.gd" id="3_47rga"]
[ext_resource type="Script" uid="uid://ccah1c0lrrvva" path="res://Scripts/game_manager.gd" id="3_yyxd1"]
[ext_resource type="PackedScene" uid="uid://un32vc3l15s3" path="res://Scenes/island_tile_1.tscn" id="4_0vbqt"]
[ext_resource type="PackedScene" uid="uid://b512d0xx2fr0d" path="res://Scenes/clouds.tscn" id="4_w1dup"]
[ext_resource type="PackedScene" uid="uid://7cjdqmiyhfw3" path="res://Scenes/island_tile_2.tscn" id="5_w1dup"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w1dup"]
shader = ExtResource("1_0vbqt")

[node name="mainScene" type="Node2D"]
material = SubResource("ShaderMaterial_w1dup")
use_parent_material = true

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="inGameUI" parent="HUD" instance=ExtResource("2_47rga")]

[node name="questDialogue" parent="HUD" instance=ExtResource("2_yyxd1")]

[node name="Umgebungsdesign" type="CanvasLayer" parent="."]
layer = -1

[node name="clouds" parent="Umgebungsdesign" instance=ExtResource("4_w1dup")]
z_index = -2
y_sort_enabled = true

[node name="ColorRect" type="ColorRect" parent="Umgebungsdesign"]
z_index = -3
y_sort_enabled = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.19215687, 0.7529412, 0.9843137, 1)

[node name="autoCamera" type="Camera2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("3_47rga")

[node name="gameManager" type="Node2D" parent="."]
script = ExtResource("3_yyxd1")

[node name="islandRoot" type="Node2D" parent="."]
use_parent_material = true
position = Vector2(640, 360)

[node name="islandTile1" parent="islandRoot" instance=ExtResource("4_0vbqt")]

[node name="islandTile2" parent="islandRoot" instance=ExtResource("5_w1dup")]
position = Vector2(-272, -136)

[node name="islandTile3" parent="islandRoot" instance=ExtResource("5_w1dup")]
z_index = -2
position = Vector2(-544, -272)

[node name="islandTile4" parent="islandRoot" instance=ExtResource("5_w1dup")]
position = Vector2(-544, 0)

[node name="islandTile5" parent="islandRoot" instance=ExtResource("5_w1dup")]
z_index = -3
position = Vector2(-272, -408)
